Formatted/aligned page // border around input box // highlight input box on mouse hover // changed color of Add and Clear buttons // added cursor-pointer on mouse hover over Add and Clear buttons // changed background color blue-->grey // FUNCTIONALITY got X to clear items, clear button to purge all, Add button works, able to append list items to bottom of to do list // FIXES no strikethrough or Check mark for list items when mouse click. need a way to signal Completed item

--- a/todolistCSS.css
+++ b/todolistCSS.css
@@ -4,7 +4,7 @@ body {
     margin: 10px auto;
     min-width: 250px;
     max-width: 50%;
-    background-color:blue
+    background-color:lightgray;
 }
 
 * {
@@ -22,6 +22,8 @@ ul li {
     padding: 12px 8px 12px 40px;
     list-style-type: none;
     background:white;
+    border: solid .5px;
+    border-color:lightgrey;
     font-size: 20px;
     transition: 0.2s; /* what is transition? */   
 
@@ -38,41 +40,61 @@ ul li {
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
+    color: blue;
 }
 
 .close:hover {
     background-color:lavender;
     color:black;
-    text-align:center;
+    text-align: center;
 }
 .header:after {
     content: "";
     display: table;
     clear: both;
 }
+
+.header {
+  text-align:justify;
+  text-decoration:none;
+  margin: 0 auto;
+}
+
 input {
     margin: 0;
     border: none;
-    border-radius: 0;
+    border-radius: 0px;
+    border-style: solid;
+    border-width:2px;
+    border-color:maroon;
     width: 75%;
     padding: 15px;
+    margin-bottom:20px;
     float: left;
-    font-size: 16px;
+    font-size: 18px;
 }
+input:hover {
+  background-color:beige;
+  opacity:90%;
+}
+
 .addBtn {
-    padding: 10px;
+    padding: 18px;
     width: 25%;
-    background:#d9d9d9;
-    color: grey;
+    background:maroon;
+    color:white;
     float: left;
     text-align: center;
-    font-size: 18px;
+    font-weight: bold;
+    font-size: 20px;
     cursor: pointer;
     transition: 0.2s;
     border-radius: 0;
 }
-addBtn:hover {
-    background-color:white;
+
+.addBtn:hover {
+    background:navy;
+    color:white;
 }
 
 #clear-list {
@@ -81,11 +103,12 @@ addBtn:hover {
     font-style: normal;
     font-size: xx-large;
     font-family: "Arial";
-    margin: 40px 35%;
-    background-color:navy;
+    margin: 20px 35%;
+    background:maroon;
     color:white;
+    cursor: pointer;
 }
 #clear-list:hover {
-    background-color:blue;
+    background-color:navy;
     color:white;
 }
